--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "e2e": "ng e2e"
   },
   "postinstall": "ng build --aot -prod",
+  "heroku-postbuild": "ng build --prod",
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.1.0",
