--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot -prod"
   },
-  "postinstall": "ng build --aot -prod",
+  
   "heroku-postbuild": "ng build --prod",
   "private": true,
   "dependencies": {
