--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "heroku-postbuild": "ng build --prod"
+    "e2e": "ng e2e"
+   
    
   },
-  
+  "heroku-postbuild": "ng build --prod",
   
   "private": true,
   "dependencies": {
