updates to deploy to heroku

--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
-   
-   
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot -prod"
   },
-  "heroku-postbuild": "ng build --prod",
   
+  "heroku-postbuild": "ng build --prod",
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.1.0",
